updated the index.html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <body>
 <div>
-    <h1>Example Domain</h1>
+    <h1>Computers-mn.com</h1>
     <p>This domain is for sale.  If you are interested email forsale@computers-mn.com</a></p>
 </div>
 </body>
